--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   min-height: 50%;
   max-height: 70%;
   background-color: white;
-  border: 2px solid grey;
+  /* border: 2px solid grey; */
 
   display:flex;
   flex-direction: column;
